Création du bundle carnet AddressBookBundle , création des controller Contact, Societe, Groupe

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+carnet_address_book:
+    resource: "@carnetAddressBookBundle/Resources/config/routing.yml"
+    prefix:   /
+
 address_book:
     resource: "@AddressBookBundle/Resources/config/routing.yml"
     prefix:   /
